--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Debugging: List files in the repository
+      - name: List files
+        run: |
+          ls -R  # List all files recursively to verify if backend/requirements.txt exists
+
       # Step 2: Set up Python (or other language)
       - name: Set up Python
         uses: actions/setup-python@v2
