Add file listing for debugging

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,10 @@ jobs:
         run: |
           ls -R  # List all files recursively to verify if backend/requirements.txt exists
 
+      # Debugging: Print working directory
+      - name: Print working directory
+        run: pwd
+
       # Step 2: Set up Python (or other language)
       - name: Set up Python
         uses: actions/setup-python@v2
