--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Install AWS CDK CLI
+        run: npm install -g aws-cdk
+
       - name: Deploy with AWS CDK
         run: cdk deploy --require-approval never
         env:
