--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '20'  # Update to a supported version
 
       - name: Install AWS CDK CLI
         run: npm install -g aws-cdk
